--- a/.github/workflows/merge_upstream_branches.yml
+++ b/.github/workflows/merge_upstream_branches.yml
@@ -6,6 +6,10 @@ on:
   push:
     branches:
       - main
+
+permissions:
+  actions: write
+
 jobs:
   merge:
     name: Publish App to Nexus Repository
