--- a/.github/workflows/merge_upstream_branches.yml
+++ b/.github/workflows/merge_upstream_branches.yml
@@ -1,46 +1,34 @@
-name: Merge upstream branches
+name: 'Upstream Sync'
 on:
   schedule:
     # Cron job will run once a day at midnight
     - cron:  '0 0 * * *'
-  push:
-    branches:
-      - main
 
-permissions:
-  actions: write
+  workflow_dispatch:  # click the button on Github repo!
+    inputs:
+      sync_test_mode: # Adds a boolean option that appears during manual workflow run for easy test mode config
+        description: 'Fork Sync Test Mode'
+        type: boolean
+        default: false
+
 
 jobs:
-  merge:
-    name: Publish App to Nexus Repository
+  sync_latest_from_upstream:
     runs-on: ubuntu-latest
+    name: Sync latest commits from upstream repo
+
     steps:
-      - name: Checkout the code
-        uses: actions/checkout@v2
+    - name: Checkout code
+      uses: actions/checkout@v2
+      with:
+        ref:  main
+        token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Set Git user
-        run: |
-          git config --global user.name 'ardihikaru'
-          git config --global user.email 'ardihikaru@users.noreply.github.com'
-
-      - name: Unshallow the repository
-        run: git pull --unshallow
-
-      - name: Add upstream remote
-        run: git remote add upstream https://github.com/aehrc/smart-forms.git
-
-      - name: Fetch upstream changes
-        run: git fetch upstream
-
-      - name: Checkout upstream main branch
-        run: git checkout upstream/main
-
-      - name: Delete local main branch
-        run: git branch -D main
-
-      - name: Checkout main branch from upstream/main
-        run: git checkout -b main upstream/main
-
-      - name: Push the changes
-        run: git push origin main --force
-        continue-on-error: true
+    - name: Sync upstream changes
+      id: sync
+      uses: aormsby/Fork-Sync-With-Upstream-action@v3.2
+      with:
+        target_sync_branch: main
+        target_repo_token: ${{ secrets.GITHUB_TOKEN }}
+        upstream_sync_branch: main
+        upstream_sync_repo: aehrc/smart-forms
