test: checking the project path

--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -45,7 +45,9 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          sparse-checkout: packages/smart-forms-renderer
+          sparse-checkout: |
+            packages
+#           path: .
 
       - run: pwd
       - run: ls -la
