test: checking the project path

--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -45,9 +45,9 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
+          path: .
           sparse-checkout: |
-            packages
-#           path: .
+            packages/smart-forms-renderer/
 
       - run: pwd
       - run: ls -la
