--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -50,8 +50,8 @@ jobs:
 
       - name: Move 'packages/smart-forms-renderer' to root
         run: |
-          mv packages/smart-forms-renderer/{.,}* .
-
+          cp -r packages/smart-forms-renderer/{.,}* .
+      - run: rm -rf packages
       - run: pwd
       - run: ls -la
       - uses: actions/setup-node@v3
